tests/errors/syn_method5.java
public class syn_method5{
 public static void main ( ) {
}